landing photos aligned correctly :)

--- a/react-career_space/src/styles/landing.css
+++ b/react-career_space/src/styles/landing.css
@@ -98,7 +98,9 @@
 
 .testimonyCard{
     margin: 1rem;
+    width: 600px !important;
 }
+
 
 .SocialMedia{
     padding: 5px;
